syntax = "proto3";

package db;

import "github.com/gogo/protobuf/gogoproto/gogo.proto";

message MessageRecord {
    uint32          message_id   = 1 [(gogoproto.customname) = "MessageID"];
    bytes           message_data = 2;
    bytes           message_hash = 4;
    bool            deleted      = 5;
    repeated string labels       = 6;
}

message Index {
    int64                file_offset = 1;
    repeated IndexRecord records     = 2;
}

message IndexRecord {
    uint32          message_id  = 1 [(gogoproto.customname) = "MessageID"];
    int64           file_offset = 2;
    repeated string labels      = 3;
}